# aws-typescript-experiment

./: .bazelrc  .gitignore  .yarnrc.yml  BUILD.bazel  README.md  WORKSPACE  awsw  jest.config.js  package.json  tsconfig.include.json  tsconfig.json
deploy/: BUILD.bazel  cdk.json  package.json  tsconfig.json
deploy/lib/: aws-lambda-experiment-stack.ts
deploy/test/: aws-lambda-experiment.test.ts
