load("//:build/defs/typescript.bzl", "ts_project")
load("//:build/defs/aws-cdk.bzl", "cdk")

ts_project(
    name = "deploy",
    srcs = ["bin/*.ts", "lib/*.ts"],
    tests = ["test/*.ts"],
    deps = [
        "//packages/b:main",
        "@npm//@aws-cdk/assert",
        "@npm//@aws-cdk/aws-lambda",
        "@npm//@aws-cdk/aws-apigateway",
    ]
)

cdk(
    srcs = [":main"],
    deps = [
        "//packages/b:main",
        "@npm//@aws-cdk/assert",
        "@npm//@aws-cdk/aws-lambda",
        "@npm//@aws-cdk/aws-apigateway",
    ]
)
